--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 <body>
     <div>
-        
+        <h1>Cadastro de DEVs</h1>
+        <p>Complete suas informções</p>
+        <br>
     </div>
-    
+
+    <form>
+        <fieldset>
+            <div></div>
+        </fieldset>
+
+    </form>
 </body>
 </html>
