Informações do campo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <form>
         <fieldset>
-            <div></div>
+            <div>
+                <label>Nome</label>
+                <input type="text" name="nome" id="nome">
+            </div>
         </fieldset>
 
     </form>
