--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 <label>Nome</label>
                 <input type="text" name="nome" id="nome">
             </div>
+
+            <div>
+                <label>Sobrenome</label>
+                <input type="text" name="sobrenome" id="sobrenome">
+            </div>
         </fieldset>
 
     </form>
