--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <label>Sobrenome</label>
                 <input type="text" name="sobrenome" id="sobrenome">
             </div>
+
+            <div>
+                <label>Email</label>
+                <input type="email" name="email" id="email">
+            </div>
         </fieldset>
 
     </form>
