--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                 <label>Email</label>
                 <input type="email" name="email" id="email">
             </div>
+
+            <div>
+                <label>De qual lado da aplicação você desenvolve?</label>
+                <label>
+                    <input type="radio" name="devweb" value="frontend">Front-End
+                </label>
+
+            </div>
         </fieldset>
 
     </form>
