--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
             <div>
                 <label>De qual lado da aplicação você desenvolve?</label>
                 <label>
-                    <input type="radio" name="devweb" value="frontend">Front-End
+                    <input type="radio" name="devweb" value="frontend" checked>Front-End
+                </label>
+                <label>
+                    <input type="radio" name="devweb" value="backend">Back-end
+                </label>
+                <label>
+                    <input type="radio" name="devweb" value="fullstack">Fullstack
                 </label>
 
             </div>
