--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
                 <option>Senior</option>
                 </select>
             </div>
+
+            <fieldset>
+                <div>
+                    <label>Selecione as tecnologias que utiliza:</label>
+                    <input type="checkbox" id="tecnologia1" value="HTML">
+                    <label for="tecnologia1">HTML</label>
+                    <input type="checkbox" id="tecnologia2" value="CSS">
+                    <label for="tecnologia2">CSS</label>
+                    <input type="checkbox" id="tecnologia3" value="JavaScript">
+                    <label for="tecnologia3">JavaScript</label>
+                    <input type="checkbox" id="tecnologia4" value="PHP">
+                    <label for="tecnologia4">PHP</label>
+                    <input type="checkbox" id="tecnologia5" value="C#">
+                    <label for="tecnologia5">C#</label>
+                    <input type="checkbox" id="tecnologia6" value="Python">
+                    <label for="tecnologia6">Phyton</label>
+                    <input type="checkbox" id="tecnologia7" value="Java">
+                    <label for="tecnologia7">Java</label>
+                    
+
+
+                    
+                </div>
+            </fieldset>
         </fieldset>
 
     </form>
