--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     <form>
         <fieldset class="grupo">
             <div class="campo">
-                <label for="nome">Nome</label>
+                <label for="nome"><strong>Nome</label>
                 <input type="text" name="nome" id="nome" required>
             </div>
 
             <div class="campo">
-                <label for="sobrenome">Sobrenome</label>
+                <label for="sobrenome"><strong>Sobrenome</strong></label>
                 <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
 
             <div class="campo">
-                <label for="email">Email</label>
+                <label for="email"><strong>Email</strong></label>
                 <input type="email" name="email" id="email" required>
             </div>
 
             <div class="campo">
-                <label>De qual lado da aplicação você desenvolve?</label>
+                <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
                 <label>
                     <input type="radio" name="devweb" value="frontend" checked>Front-End
                 </label>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="campo">
-                <label>Senioridade</label>
+                <label><strong>Senioridade</strong></label>
                 <select id="senioridade">
                 <option selected disabled value="">Selecione</option>
                 <option>Junior</option>
@@ -56,7 +56,7 @@
 
             <fieldset class="grupo">
                 <div>
-                    <label>Selecione as tecnologias que utiliza:</label>
+                    <label><strong>Selecione as tecnologias que utiliza:</strong></label>
                     <input type="checkbox" id="tecnologia1" value="HTML">
                     <label for="tecnologia1">HTML</label>
                     <input type="checkbox" id="tecnologia2" value="CSS">
@@ -75,7 +75,7 @@
 
                 <div class="campo">
                     <br>
-                    <label>Conte um pouco da sua experiência:</label>
+                    <label><strong>Conte um pouco da sua experiência:</strong></label>
                     <textarea row="6" style="width: 26em;" id="experiencia"></textarea>
                 </div>
 
