--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="campo">
-                <label><strong>Senioridade</strong></label>
+                <label for="senioridade"><strong>Senioridade</strong></label>
                 <select id="senioridade">
                 <option selected disabled value="">Selecione</option>
                 <option>Junior</option>
@@ -79,7 +79,7 @@
                     <textarea row="6" style="width: 26em;" id="experiencia"></textarea>
                 </div>
 
-                <button type="submit">Concluído</button>
+                <button class="botao" type="submit">Concluído</button>
             </fieldset>
         </fieldset>
 
