Testando ajustes de centralização do conteúdo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                 <div class="campo">
                     <label for="senioridade"><strong>Senioridade</strong></label>
-                    <select id="senioridade">
+                    <select style="width: 150px;" id="senioridade">
                     <option selected disabled value="">Selecione</option>
                     <option>Junior</option>
                     <option>Pleno</option>
